fixing Cert section spacing and h3 coloring

--- a/css/sections.css
+++ b/css/sections.css
@@ -52,8 +52,6 @@ p {
     color:#202020;
 }
 
-
-
 .skill-card p {
     color:#fff;
 }
@@ -187,8 +185,12 @@ p {
     color:#fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h4, h5, h6 {
     color:#111;
+}
+
+h3 {
+    color:#333;
 }
 
 [data-theme="dark"] .project-section {
